<package>
  <name>pr2_calibration_controllers</name>
  <version>1.10.17</version>
  <description>The pr2_calibration_controllers package contains the controllers
     used to bring all the joints in the PR2 to a calibrated state.</description>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_calibration_controllers</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Stuart Glaser</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>robot_mechanism_controllers</build_depend>
  <build_depend>pr2_mechanism_controllers</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>pr2_controller_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>robot_mechanism_controllers</run_depend>
  <run_depend>pr2_mechanism_controllers</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <pr2_controller_interface plugin="${prefix}/controller_plugins.xml"/>
  </export>
</package>
