<package>
  <name>pr2_gripper_action</name>
  <version>1.10.17</version>
  <description>The pr2_gripper_action provides an action interface for using the
  gripper. Users can specify what position to move to (while limiting the
  force) and the action will report success when the position is reached or
  failure when the gripper cannot move any longer.</description>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_gripper_action</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Stuart Glaser</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>pr2_mechanism_controllers</build_depend>
  <build_depend>robot_mechanism_controllers</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>pr2_mechanism_controllers</run_depend>
  <run_depend>robot_mechanism_controllers</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
</package>
